<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game book</string>
    <string name="hello_world">Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lblPresent">Present</string>
    <string name="lblFuture">"Future  "</string>
    <string name="lblPast">Past</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent congue sapien laoreet dolor commodo scelerisque. Proin ultricies eros ac erat elementum finibus. Donec congue efficitur lorem sit amet blandit. Maecenas nec laoreet lectus. Nullam in justo ut nulla vulputate sodales. Nullam nisl nibh, aliquam quis ante vel, bibendum dignissim turpis. In in sollicitudin leo. Nullam varius felis a imperdiet malesuada. Duis ac consectetur leo. Etiam id neque ligula. Aenean sapien leo, accumsan ac viverra at, ornare at quam. Mauris viverra in libero vel condimentum. In porta metus eu neque ornare, ac ullamcorper elit porttitor. Suspendisse urna libero, pulvinar eget felis sed, faucibus egestas ipsum. Vestibulum finibus ornare quam, quis posuere lorem finibus eu. Nunc nec purus ac urna vulputate lacinia. Aliquam et dignissim purus. Curabitur dui massa, ornare in convallis a, pharetra efficitur ex. Etiam interdum arcu dolor, sed finibus metus sollicitudin vitae. Nunc ac ligula volutpat, lobortis mi id, vulputate erat. Vivamus sed eros vitae lacus feugiat ultricies. Maecenas et dictum risus. Aenean ipsum est, feugiat et ex eget, bibendum dignissim metus. Aenean congue tempus eros sit amet pretium. Nullam id sollicitudin leo. Etiam imperdiet tellus ex, in pharetra est vulputate quis. Proin gravida tincidunt blandit. Nullam sodales turpis et odio pellentesque gravida. Maecenas at massa sodales, molestie diam sit amet, semper lorem. Duis eu neque justo. Integer pretium euismod purus sit amet fringilla. Morbi posuere nec lacus id dignissim. Suspendisse aliquam purus a nunc mattis, vitae venenatis nibh rhoncus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut pellentesque elementum massa in consectetur. In hac habitasse platea dictumst. Ut sollicitudin pellentesque mollis. Quisque eget viverra dui. Donec suscipit sed quam id mollis. Nullam rhoncus nibh urna, sed lobortis orci blandit non. Aliquam sed posuere turpis. Cras elit ipsum, pulvinar vitae sagittis ac, auctor sit amet augue. Nullam et lobortis metus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Phasellus quis justo a ex molestie interdum vel mattis neque. Sed luctus hendrerit lectus, vel imperdiet dolor aliquet ac. Nam lacinia mauris vitae erat efficitur luctus. Pellentesque id velit quis mauris molestie porta id eget justo.</string>
    <string name="title_activity_past">Past</string>
    <string name="title_activity_future">Future</string>
    <string name="txtChoose">Choose</string>
    <string-array name="choices">
        <item>Make a choice...</item>
        <item>Choice 1</item>
        <item>Choice 2</item>
    </string-array>
</resources>
