<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPresent"
        android:id="@+id/lblPresent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/timeLabel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPast"
        android:id="@+id/btnPast"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblFuture"
        android:id="@+id/btnFuture"
        android:layout_alignBottom="@+id/btnPast"
        android:layout_alignParentEnd="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/scrollHeight"
        android:layout_marginTop="25dp"
        android:id="@+id/scrollView"
        android:layout_below="@+id/lblPresent"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/loremIpsum"
            android:textSize="20dp"
            android:id="@+id/txtPresent" />
    </ScrollView>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spChoice"
        android:layout_toStartOf="@+id/lblPresent"
        android:spinnerMode="dropdown"
        android:layout_above="@+id/btnPast"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtChoose"
        android:id="@+id/btnChoose"
        android:layout_toEndOf="@+id/spChoice"
        android:layout_alignTop="@+id/spChoice"
        android:layout_alignStart="@+id/btnFuture" />
</RelativeLayout>
